--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <ul>
         <li><a href="{{ site.url }}/"><strong>Overview</strong></a></li>
         <li><a href="{{ site.url }}/people"><strong>People</strong></a></li>
-        <li><a href="https://github.com/bpln/ContractsCloud/"><strong>Download</strong></a></li>
+        <li><a href="https://bpln.github.io/PADS"><strong>Download</strong></a></li>
         </ul>
 
         </div>
