--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,9 @@
           "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
         });
           </script>
-        <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML" type="text/javascript"></script>
+        <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
   </head>
   <body>
     <div class="wrapper">
